Added playback and fixed recording bugs.